# CMSC701_HW1

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  REPORT.md  buildsa  cmake_install.cmake  querysa
FASTA/: qecoli.fa  qgg.fa  qs.fa  s.fna
outputs/: ecoliqueryresults.txt  ggqueryresults.txt  squeryresults.txt
src/: buildsa.cpp  querysa.cpp
